src/lib/Core/Parser/EZQLParser.php
<?php

/*
 * Generated from EZQL.g4 by ANTLR 4.8
 */

namespace EzSystems\EzPlatformQueryLanguage\Core\Parser {
    use Antlr\Antlr4\Runtime\Atn\ATN;
    use Antlr\Antlr4\Runtime\Atn\ATNDeserializer;
    use Antlr\Antlr4\Runtime\Atn\ParserATNSimulator;
    use Antlr\Antlr4\Runtime\Dfa\DFA;
    use Antlr\Antlr4\Runtime\Error\Exceptions\FailedPredicateException;
    use Antlr\Antlr4\Runtime\Error\Exceptions\NoViableAltException;
    use Antlr\Antlr4\Runtime\PredictionContexts\PredictionContextCache;
    use Antlr\Antlr4\Runtime\Error\Exceptions\RecognitionException;
    use Antlr\Antlr4\Runtime\RuleContext;
    use Antlr\Antlr4\Runtime\Token;
    use Antlr\Antlr4\Runtime\TokenStream;
    use Antlr\Antlr4\Runtime\Vocabulary;
    use Antlr\Antlr4\Runtime\VocabularyImpl;
    use Antlr\Antlr4\Runtime\Parser;

    final class EZQLParser extends Parser
    {
        public const T__0 = 1;
        public const T__1 = 2;
        public const T__2 = 3;
        public const T__3 = 4;
        public const K_ALL = 5;
        public const K_AND = 6;
        public const K_ASC = 7;
        public const K_BETWEEN = 8;
        public const K_BY = 9;
        public const K_CONTAINS = 10;
        public const K_CONTENT = 11;
        public const K_CREATED = 12;
        public const K_DESC = 13;
        public const K_FALSE = 14;
        public const K_FIELD = 15;
        public const K_FILTER = 16;
        public const K_GROUP = 17;
        public const K_HIDDEN = 18;
        public const K_IN = 19;
        public const K_INFO = 20;
        public const K_IS = 21;
        public const K_LIKE = 22;
        public const K_LIMIT = 23;
        public const K_LOCATION = 24;
        public const K_MAIN = 25;
        public const K_MATCH = 26;
        public const K_MODIFIER = 27;
        public const K_MODIFIED = 28;
        public const K_NONE = 29;
        public const K_NOT = 30;
        public const K_OFFSET = 31;
        public const K_OR = 32;
        public const K_ORDER = 33;
        public const K_OWNER = 34;
        public const K_PRIORITY = 35;
        public const K_QUERY = 36;
        public const K_SELECT = 37;
        public const K_TRUE = 38;
        public const K_VISIBLE = 39;
        public const EQ = 40;
        public const NEQ = 41;
        public const GT = 42;
        public const GTE = 43;
        public const LT = 44;
        public const LTE = 45;
        public const INT = 46;
        public const DOUBLE = 47;
        public const STRING = 48;
        public const PARAMETER_NAME = 49;
        public const ID = 50;
        public const WS = 51;

        public const RULE_stmt = 0;
        public const RULE_selectLocation = 1;
        public const RULE_selectContent = 2;
        public const RULE_selectContentInfo = 3;
        public const RULE_selectProperties = 4;
        public const RULE_sortClauseList = 5;
        public const RULE_sortClause = 6;
        public const RULE_sortOrder = 7;
        public const RULE_expr = 8;
        public const RULE_operator = 9;
        public const RULE_value = 10;
        public const RULE_argumentRange = 11;
        public const RULE_argumentList = 12;
        public const RULE_argument = 13;
        public const RULE_parameter = 14;
        public const RULE_scalar = 15;
        public const RULE_userMetadataTarget = 16;

        /**
         * @var array<string>
         */
        public const RULE_NAMES = [
            'stmt', 'selectLocation', 'selectContent', 'selectContentInfo', 'selectProperties',
            'sortClauseList', 'sortClause', 'sortOrder', 'expr', 'operator', 'value',
            'argumentRange', 'argumentList', 'argument', 'parameter', 'scalar', 'userMetadataTarget',
        ];

        /**
         * @var array<string|null>
         */
        private const LITERAL_NAMES = [
            null, "','", "'('", "')'", "'..'", null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, "'='", "'!='", "'>'", "'>='",
            "'<'", "'<='",
        ];

        /**
         * @var array<string>
         */
        private const SYMBOLIC_NAMES = [
            null, null, null, null, null, 'K_ALL', 'K_AND', 'K_ASC', 'K_BETWEEN',
            'K_BY', 'K_CONTAINS', 'K_CONTENT', 'K_CREATED', 'K_DESC', 'K_FALSE',
            'K_FIELD', 'K_FILTER', 'K_GROUP', 'K_HIDDEN', 'K_IN', 'K_INFO', 'K_IS',
            'K_LIKE', 'K_LIMIT', 'K_LOCATION', 'K_MAIN', 'K_MATCH', 'K_MODIFIER',
            'K_MODIFIED', 'K_NONE', 'K_NOT', 'K_OFFSET', 'K_OR', 'K_ORDER', 'K_OWNER',
            'K_PRIORITY', 'K_QUERY', 'K_SELECT', 'K_TRUE', 'K_VISIBLE', 'EQ',
            'NEQ', 'GT', 'GTE', 'LT', 'LTE', 'INT', 'DOUBLE', 'STRING', 'PARAMETER_NAME',
            'ID', 'WS',
        ];

        /**
         * @var string
         */
        private const SERIALIZED_ATN =
            "\u{3}\u{608B}\u{A72A}\u{8133}\u{B9ED}\u{417C}\u{3BE7}\u{7786}\u{5964}" .
            "\u{3}\u{35}\u{BB}\u{4}\u{2}\u{9}\u{2}\u{4}\u{3}\u{9}\u{3}\u{4}\u{4}" .
            "\u{9}\u{4}\u{4}\u{5}\u{9}\u{5}\u{4}\u{6}\u{9}\u{6}\u{4}\u{7}\u{9}" .
            "\u{7}\u{4}\u{8}\u{9}\u{8}\u{4}\u{9}\u{9}\u{9}\u{4}\u{A}\u{9}\u{A}" .
            "\u{4}\u{B}\u{9}\u{B}\u{4}\u{C}\u{9}\u{C}\u{4}\u{D}\u{9}\u{D}\u{4}" .
            "\u{E}\u{9}\u{E}\u{4}\u{F}\u{9}\u{F}\u{4}\u{10}\u{9}\u{10}\u{4}\u{11}" .
            "\u{9}\u{11}\u{4}\u{12}\u{9}\u{12}\u{3}\u{2}\u{3}\u{2}\u{3}\u{2}\u{5}" .
            "\u{2}\u{28}\u{A}\u{2}\u{3}\u{3}\u{3}\u{3}\u{3}\u{3}\u{3}\u{3}\u{3}" .
            "\u{4}\u{3}\u{4}\u{3}\u{4}\u{3}\u{4}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}" .
            "\u{3}\u{5}\u{3}\u{5}\u{3}\u{6}\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{3A}" .
            "\u{A}\u{6}\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{3E}\u{A}\u{6}\u{3}\u{6}" .
            "\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{43}\u{A}\u{6}\u{3}\u{6}\u{3}\u{6}" .
            "\u{5}\u{6}\u{47}\u{A}\u{6}\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{4B}\u{A}" .
            "\u{6}\u{3}\u{7}\u{3}\u{7}\u{3}\u{7}\u{7}\u{7}\u{50}\u{A}\u{7}\u{C}" .
            "\u{7}\u{E}\u{7}\u{53}\u{B}\u{7}\u{3}\u{8}\u{3}\u{8}\u{3}\u{8}\u{3}" .
            "\u{9}\u{3}\u{9}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}" .
            "\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}" .
            "\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}" .
            "\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}" .
            "\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}" .
            "\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}" .
            "\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}" .
            "\u{5}\u{A}\u{86}\u{A}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}" .
            "\u{3}\u{A}\u{3}\u{A}\u{7}\u{A}\u{8E}\u{A}\u{A}\u{C}\u{A}\u{E}\u{A}" .
            "\u{91}\u{B}\u{A}\u{3}\u{B}\u{3}\u{B}\u{3}\u{B}\u{3}\u{B}\u{5}\u{B}" .
            "\u{97}\u{A}\u{B}\u{3}\u{C}\u{3}\u{C}\u{3}\u{C}\u{5}\u{C}\u{9C}\u{A}" .
            "\u{C}\u{3}\u{D}\u{3}\u{D}\u{3}\u{D}\u{3}\u{D}\u{3}\u{E}\u{3}\u{E}" .
            "\u{3}\u{E}\u{3}\u{E}\u{7}\u{E}\u{A6}\u{A}\u{E}\u{C}\u{E}\u{E}\u{E}" .
            "\u{A9}\u{B}\u{E}\u{3}\u{E}\u{3}\u{E}\u{3}\u{F}\u{3}\u{F}\u{5}\u{F}" .
            "\u{AF}\u{A}\u{F}\u{3}\u{10}\u{3}\u{10}\u{3}\u{11}\u{3}\u{11}\u{3}" .
            "\u{11}\u{3}\u{11}\u{5}\u{11}\u{B7}\u{A}\u{11}\u{3}\u{12}\u{3}\u{12}" .
            "\u{3}\u{12}\u{2}\u{3}\u{12}\u{13}\u{2}\u{4}\u{6}\u{8}\u{A}\u{C}\u{E}" .
            "\u{10}\u{12}\u{14}\u{16}\u{18}\u{1A}\u{1C}\u{1E}\u{20}\u{22}\u{2}" .
            "\u{7}\u{4}\u{2}\u{9}\u{9}\u{F}\u{F}\u{4}\u{2}\u{14}\u{14}\u{29}\u{29}" .
            "\u{8}\u{2}\u{A}\u{A}\u{C}\u{C}\u{15}\u{15}\u{18}\u{18}\u{2A}\u{2A}" .
            "\u{2C}\u{2F}\u{4}\u{2}\u{10}\u{10}\u{28}\u{28}\u{5}\u{2}\u{13}\u{13}" .
            "\u{1D}\u{1D}\u{24}\u{24}\u{2}\u{C7}\u{2}\u{27}\u{3}\u{2}\u{2}\u{2}" .
            "\u{4}\u{29}\u{3}\u{2}\u{2}\u{2}\u{6}\u{2D}\u{3}\u{2}\u{2}\u{2}\u{8}" .
            "\u{31}\u{3}\u{2}\u{2}\u{2}\u{A}\u{39}\u{3}\u{2}\u{2}\u{2}\u{C}\u{4C}" .
            "\u{3}\u{2}\u{2}\u{2}\u{E}\u{54}\u{3}\u{2}\u{2}\u{2}\u{10}\u{57}\u{3}" .
            "\u{2}\u{2}\u{2}\u{12}\u{85}\u{3}\u{2}\u{2}\u{2}\u{14}\u{96}\u{3}\u{2}" .
            "\u{2}\u{2}\u{16}\u{9B}\u{3}\u{2}\u{2}\u{2}\u{18}\u{9D}\u{3}\u{2}\u{2}" .
            "\u{2}\u{1A}\u{A1}\u{3}\u{2}\u{2}\u{2}\u{1C}\u{AE}\u{3}\u{2}\u{2}\u{2}" .
            "\u{1E}\u{B0}\u{3}\u{2}\u{2}\u{2}\u{20}\u{B6}\u{3}\u{2}\u{2}\u{2}\u{22}" .
            "\u{B8}\u{3}\u{2}\u{2}\u{2}\u{24}\u{28}\u{5}\u{4}\u{3}\u{2}\u{25}\u{28}" .
            "\u{5}\u{6}\u{4}\u{2}\u{26}\u{28}\u{5}\u{8}\u{5}\u{2}\u{27}\u{24}\u{3}" .
            "\u{2}\u{2}\u{2}\u{27}\u{25}\u{3}\u{2}\u{2}\u{2}\u{27}\u{26}\u{3}\u{2}" .
            "\u{2}\u{2}\u{28}\u{3}\u{3}\u{2}\u{2}\u{2}\u{29}\u{2A}\u{7}\u{27}\u{2}" .
            "\u{2}\u{2A}\u{2B}\u{7}\u{1A}\u{2}\u{2}\u{2B}\u{2C}\u{5}\u{A}\u{6}" .
            "\u{2}\u{2C}\u{5}\u{3}\u{2}\u{2}\u{2}\u{2D}\u{2E}\u{7}\u{27}\u{2}\u{2}" .
            "\u{2E}\u{2F}\u{7}\u{D}\u{2}\u{2}\u{2F}\u{30}\u{5}\u{A}\u{6}\u{2}\u{30}" .
            "\u{7}\u{3}\u{2}\u{2}\u{2}\u{31}\u{32}\u{7}\u{27}\u{2}\u{2}\u{32}\u{33}" .
            "\u{7}\u{D}\u{2}\u{2}\u{33}\u{34}\u{7}\u{16}\u{2}\u{2}\u{34}\u{35}" .
            "\u{5}\u{A}\u{6}\u{2}\u{35}\u{9}\u{3}\u{2}\u{2}\u{2}\u{36}\u{37}\u{7}" .
            "\u{12}\u{2}\u{2}\u{37}\u{38}\u{7}\u{B}\u{2}\u{2}\u{38}\u{3A}\u{5}" .
            "\u{12}\u{A}\u{2}\u{39}\u{36}\u{3}\u{2}\u{2}\u{2}\u{39}\u{3A}\u{3}" .
            "\u{2}\u{2}\u{2}\u{3A}\u{3D}\u{3}\u{2}\u{2}\u{2}\u{3B}\u{3C}\u{7}\u{26}" .
            "\u{2}\u{2}\u{3C}\u{3E}\u{5}\u{12}\u{A}\u{2}\u{3D}\u{3B}\u{3}\u{2}" .
            "\u{2}\u{2}\u{3D}\u{3E}\u{3}\u{2}\u{2}\u{2}\u{3E}\u{42}\u{3}\u{2}\u{2}" .
            "\u{2}\u{3F}\u{40}\u{7}\u{23}\u{2}\u{2}\u{40}\u{41}\u{7}\u{B}\u{2}" .
            "\u{2}\u{41}\u{43}\u{5}\u{C}\u{7}\u{2}\u{42}\u{3F}\u{3}\u{2}\u{2}\u{2}" .
            "\u{42}\u{43}\u{3}\u{2}\u{2}\u{2}\u{43}\u{46}\u{3}\u{2}\u{2}\u{2}\u{44}" .
            "\u{45}\u{7}\u{19}\u{2}\u{2}\u{45}\u{47}\u{5}\u{1C}\u{F}\u{2}\u{46}" .
            "\u{44}\u{3}\u{2}\u{2}\u{2}\u{46}\u{47}\u{3}\u{2}\u{2}\u{2}\u{47}\u{4A}" .
            "\u{3}\u{2}\u{2}\u{2}\u{48}\u{49}\u{7}\u{21}\u{2}\u{2}\u{49}\u{4B}" .
            "\u{5}\u{1C}\u{F}\u{2}\u{4A}\u{48}\u{3}\u{2}\u{2}\u{2}\u{4A}\u{4B}" .
            "\u{3}\u{2}\u{2}\u{2}\u{4B}\u{B}\u{3}\u{2}\u{2}\u{2}\u{4C}\u{51}\u{5}" .
            "\u{E}\u{8}\u{2}\u{4D}\u{4E}\u{7}\u{3}\u{2}\u{2}\u{4E}\u{50}\u{5}\u{E}" .
            "\u{8}\u{2}\u{4F}\u{4D}\u{3}\u{2}\u{2}\u{2}\u{50}\u{53}\u{3}\u{2}\u{2}" .
            "\u{2}\u{51}\u{4F}\u{3}\u{2}\u{2}\u{2}\u{51}\u{52}\u{3}\u{2}\u{2}\u{2}" .
            "\u{52}\u{D}\u{3}\u{2}\u{2}\u{2}\u{53}\u{51}\u{3}\u{2}\u{2}\u{2}\u{54}" .
            "\u{55}\u{7}\u{34}\u{2}\u{2}\u{55}\u{56}\u{5}\u{10}\u{9}\u{2}\u{56}" .
            "\u{F}\u{3}\u{2}\u{2}\u{2}\u{57}\u{58}\u{9}\u{2}\u{2}\u{2}\u{58}\u{11}" .
            "\u{3}\u{2}\u{2}\u{2}\u{59}\u{5A}\u{8}\u{A}\u{1}\u{2}\u{5A}\u{5B}\u{7}" .
            "\u{1C}\u{2}\u{2}\u{5B}\u{86}\u{7}\u{7}\u{2}\u{2}\u{5C}\u{5D}\u{7}" .
            "\u{1C}\u{2}\u{2}\u{5D}\u{86}\u{7}\u{1F}\u{2}\u{2}\u{5E}\u{5F}\u{7}" .
            "\u{17}\u{2}\u{2}\u{5F}\u{60}\u{7}\u{1B}\u{2}\u{2}\u{60}\u{86}\u{7}" .
            "\u{1A}\u{2}\u{2}\u{61}\u{62}\u{7}\u{17}\u{2}\u{2}\u{62}\u{63}\u{7}" .
            "\u{20}\u{2}\u{2}\u{63}\u{64}\u{7}\u{1B}\u{2}\u{2}\u{64}\u{86}\u{7}" .
            "\u{1A}\u{2}\u{2}\u{65}\u{66}\u{7}\u{17}\u{2}\u{2}\u{66}\u{86}\u{9}" .
            "\u{3}\u{2}\u{2}\u{67}\u{68}\u{7}\u{11}\u{2}\u{2}\u{68}\u{69}\u{7}" .
            "\u{34}\u{2}\u{2}\u{69}\u{6A}\u{5}\u{14}\u{B}\u{2}\u{6A}\u{6B}\u{5}" .
            "\u{16}\u{C}\u{2}\u{6B}\u{86}\u{3}\u{2}\u{2}\u{2}\u{6C}\u{6D}\u{7}" .
            "\u{1A}\u{2}\u{2}\u{6D}\u{6E}\u{7}\u{25}\u{2}\u{2}\u{6E}\u{6F}\u{5}" .
            "\u{14}\u{B}\u{2}\u{6F}\u{70}\u{5}\u{16}\u{C}\u{2}\u{70}\u{86}\u{3}" .
            "\u{2}\u{2}\u{2}\u{71}\u{72}\u{7}\u{E}\u{2}\u{2}\u{72}\u{73}\u{5}\u{14}" .
            "\u{B}\u{2}\u{73}\u{74}\u{5}\u{16}\u{C}\u{2}\u{74}\u{86}\u{3}\u{2}" .
            "\u{2}\u{2}\u{75}\u{76}\u{7}\u{1E}\u{2}\u{2}\u{76}\u{77}\u{5}\u{14}" .
            "\u{B}\u{2}\u{77}\u{78}\u{5}\u{16}\u{C}\u{2}\u{78}\u{86}\u{3}\u{2}" .
            "\u{2}\u{2}\u{79}\u{7A}\u{5}\u{22}\u{12}\u{2}\u{7A}\u{7B}\u{5}\u{14}" .
            "\u{B}\u{2}\u{7B}\u{7C}\u{5}\u{16}\u{C}\u{2}\u{7C}\u{86}\u{3}\u{2}" .
            "\u{2}\u{2}\u{7D}\u{7E}\u{7}\u{34}\u{2}\u{2}\u{7E}\u{7F}\u{5}\u{14}" .
            "\u{B}\u{2}\u{7F}\u{80}\u{5}\u{16}\u{C}\u{2}\u{80}\u{86}\u{3}\u{2}" .
            "\u{2}\u{2}\u{81}\u{82}\u{7}\u{4}\u{2}\u{2}\u{82}\u{83}\u{5}\u{12}" .
            "\u{A}\u{2}\u{83}\u{84}\u{7}\u{5}\u{2}\u{2}\u{84}\u{86}\u{3}\u{2}\u{2}" .
            "\u{2}\u{85}\u{59}\u{3}\u{2}\u{2}\u{2}\u{85}\u{5C}\u{3}\u{2}\u{2}\u{2}" .
            "\u{85}\u{5E}\u{3}\u{2}\u{2}\u{2}\u{85}\u{61}\u{3}\u{2}\u{2}\u{2}\u{85}" .
            "\u{65}\u{3}\u{2}\u{2}\u{2}\u{85}\u{67}\u{3}\u{2}\u{2}\u{2}\u{85}\u{6C}" .
            "\u{3}\u{2}\u{2}\u{2}\u{85}\u{71}\u{3}\u{2}\u{2}\u{2}\u{85}\u{75}\u{3}" .
            "\u{2}\u{2}\u{2}\u{85}\u{79}\u{3}\u{2}\u{2}\u{2}\u{85}\u{7D}\u{3}\u{2}" .
            "\u{2}\u{2}\u{85}\u{81}\u{3}\u{2}\u{2}\u{2}\u{86}\u{8F}\u{3}\u{2}\u{2}" .
            "\u{2}\u{87}\u{88}\u{C}\u{5}\u{2}\u{2}\u{88}\u{89}\u{7}\u{8}\u{2}\u{2}" .
            "\u{89}\u{8E}\u{5}\u{12}\u{A}\u{6}\u{8A}\u{8B}\u{C}\u{4}\u{2}\u{2}" .
            "\u{8B}\u{8C}\u{7}\u{22}\u{2}\u{2}\u{8C}\u{8E}\u{5}\u{12}\u{A}\u{5}" .
            "\u{8D}\u{87}\u{3}\u{2}\u{2}\u{2}\u{8D}\u{8A}\u{3}\u{2}\u{2}\u{2}\u{8E}" .
            "\u{91}\u{3}\u{2}\u{2}\u{2}\u{8F}\u{8D}\u{3}\u{2}\u{2}\u{2}\u{8F}\u{90}" .
            "\u{3}\u{2}\u{2}\u{2}\u{90}\u{13}\u{3}\u{2}\u{2}\u{2}\u{91}\u{8F}\u{3}" .
            "\u{2}\u{2}\u{2}\u{92}\u{97}\u{9}\u{4}\u{2}\u{2}\u{93}\u{94}\u{7}\u{20}" .
            "\u{2}\u{2}\u{94}\u{97}\u{7}\u{15}\u{2}\u{2}\u{95}\u{97}\u{7}\u{2B}" .
            "\u{2}\u{2}\u{96}\u{92}\u{3}\u{2}\u{2}\u{2}\u{96}\u{93}\u{3}\u{2}\u{2}" .
            "\u{2}\u{96}\u{95}\u{3}\u{2}\u{2}\u{2}\u{97}\u{15}\u{3}\u{2}\u{2}\u{2}" .
            "\u{98}\u{9C}\u{5}\u{1C}\u{F}\u{2}\u{99}\u{9C}\u{5}\u{1A}\u{E}\u{2}" .
            "\u{9A}\u{9C}\u{5}\u{18}\u{D}\u{2}\u{9B}\u{98}\u{3}\u{2}\u{2}\u{2}" .
            "\u{9B}\u{99}\u{3}\u{2}\u{2}\u{2}\u{9B}\u{9A}\u{3}\u{2}\u{2}\u{2}\u{9C}" .
            "\u{17}\u{3}\u{2}\u{2}\u{2}\u{9D}\u{9E}\u{5}\u{1C}\u{F}\u{2}\u{9E}" .
            "\u{9F}\u{7}\u{6}\u{2}\u{2}\u{9F}\u{A0}\u{5}\u{1C}\u{F}\u{2}\u{A0}" .
            "\u{19}\u{3}\u{2}\u{2}\u{2}\u{A1}\u{A2}\u{7}\u{4}\u{2}\u{2}\u{A2}\u{A7}" .
            "\u{5}\u{1C}\u{F}\u{2}\u{A3}\u{A4}\u{7}\u{3}\u{2}\u{2}\u{A4}\u{A6}" .
            "\u{5}\u{1C}\u{F}\u{2}\u{A5}\u{A3}\u{3}\u{2}\u{2}\u{2}\u{A6}\u{A9}" .
            "\u{3}\u{2}\u{2}\u{2}\u{A7}\u{A5}\u{3}\u{2}\u{2}\u{2}\u{A7}\u{A8}\u{3}" .
            "\u{2}\u{2}\u{2}\u{A8}\u{AA}\u{3}\u{2}\u{2}\u{2}\u{A9}\u{A7}\u{3}\u{2}" .
            "\u{2}\u{2}\u{AA}\u{AB}\u{7}\u{5}\u{2}\u{2}\u{AB}\u{1B}\u{3}\u{2}\u{2}" .
            "\u{2}\u{AC}\u{AF}\u{5}\u{1E}\u{10}\u{2}\u{AD}\u{AF}\u{5}\u{20}\u{11}" .
            "\u{2}\u{AE}\u{AC}\u{3}\u{2}\u{2}\u{2}\u{AE}\u{AD}\u{3}\u{2}\u{2}\u{2}" .
            "\u{AF}\u{1D}\u{3}\u{2}\u{2}\u{2}\u{B0}\u{B1}\u{7}\u{33}\u{2}\u{2}" .
            "\u{B1}\u{1F}\u{3}\u{2}\u{2}\u{2}\u{B2}\u{B7}\u{7}\u{30}\u{2}\u{2}" .
            "\u{B3}\u{B7}\u{9}\u{5}\u{2}\u{2}\u{B4}\u{B7}\u{7}\u{32}\u{2}\u{2}" .
            "\u{B5}\u{B7}\u{7}\u{31}\u{2}\u{2}\u{B6}\u{B2}\u{3}\u{2}\u{2}\u{2}" .
            "\u{B6}\u{B3}\u{3}\u{2}\u{2}\u{2}\u{B6}\u{B4}\u{3}\u{2}\u{2}\u{2}\u{B6}" .
            "\u{B5}\u{3}\u{2}\u{2}\u{2}\u{B7}\u{21}\u{3}\u{2}\u{2}\u{2}\u{B8}\u{B9}" .
            "\u{9}\u{6}\u{2}\u{2}\u{B9}\u{23}\u{3}\u{2}\u{2}\u{2}\u{11}\u{27}\u{39}" .
            "\u{3D}\u{42}\u{46}\u{4A}\u{51}\u{85}\u{8D}\u{8F}\u{96}\u{9B}\u{A7}" .
            "\u{AE}\u{B6}";

        protected static $atn;
        protected static $decisionToDFA;
        protected static $sharedContextCache;

        public function __construct(TokenStream $input)
        {
            parent::__construct($input);

            self::initialize();

            $this->interp = new ParserATNSimulator($this, self::$atn, self::$decisionToDFA, self::$sharedContextCache);
        }

        private static function initialize(): void
        {
            if (self::$atn !== null) {
                return;
            }

            $atn = (new ATNDeserializer())->deserialize(self::SERIALIZED_ATN);

            $decisionToDFA = [];
            for ($i = 0, $count = $atn->getNumberOfDecisions(); $i < $count; ++$i) {
                $decisionToDFA[] = new DFA($atn->getDecisionState($i), $i);
            }

            self::$atn = $atn;
            self::$decisionToDFA = $decisionToDFA;
            self::$sharedContextCache = new PredictionContextCache();
        }

        public function getGrammarFileName(): string
        {
            return 'EZQL.g4';
        }

        public function getRuleNames(): array
        {
            return self::RULE_NAMES;
        }

        public function getSerializedATN(): string
        {
            return self::SERIALIZED_ATN;
        }

        public function getATN(): ATN
        {
            return self::$atn;
        }

        public function getVocabulary(): Vocabulary
        {
            static $vocabulary;

            return $vocabulary = $vocabulary ?? new VocabularyImpl(self::LITERAL_NAMES, self::SYMBOLIC_NAMES);
        }

        /**
         * @throws RecognitionException
         */
        public function stmt(): Context\StmtContext
        {
            $localContext = new Context\StmtContext($this->ctx, $this->getState());

            $this->enterRule($localContext, 0, self::RULE_stmt);

            try {
                $this->setState(37);
                $this->errorHandler->sync($this);

                switch ($this->getInterpreter()->adaptivePredict($this->input, 0, $this->ctx)) {
                    case 1:
                        $this->enterOuterAlt($localContext, 1);
                        $this->setState(34);
                        $this->selectLocation();
                    break;

                    case 2:
                        $this->enterOuterAlt($localContext, 2);
                        $this->setState(35);
                        $this->selectContent();
                    break;

                    case 3:
                        $this->enterOuterAlt($localContext, 3);
                        $this->setState(36);
                        $this->selectContentInfo();
                    break;
                }
            } catch (RecognitionException $exception) {
                $localContext->exception = $exception;
                $this->errorHandler->reportError($this, $exception);
                $this->errorHandler->recover($this, $exception);
            } finally {
                $this->exitRule();
            }

            return $localContext;
        }

        /**
         * @throws RecognitionException
         */
        public function selectLocation(): Context\SelectLocationContext
        {
            $localContext = new Context\SelectLocationContext($this->ctx, $this->getState());

            $this->enterRule($localContext, 2, self::RULE_selectLocation);
